# Engine

./: .gitignore  CMakeLists.txt  README.md  SceneLoader.cpp  SceneLoader.h  affine.h  animation.cpp  animation.h  astyle.sh  color4.cpp  color4.h  cppcheck.sh  drawable.h  engine.cpp  engine.h  game-object.h  image.cpp  image.h  incremeter.h  line-object.cpp  line-object.h  main.cpp  main.cpp.orig  point-object.cpp  point-object.h  point2f.cpp  point2f.h  polygon.cpp  polygon.h  rectf.cpp  rectf.h  render.cpp  render.h  runnable.h  sample_scene.scn  scene.cpp  scene.h
data/scenes/: Animations.scn  Images.scn  sample_scene.scn
include/: SceneLoader.h  affine.h  animation.h  color.h  color.h.orig  color4.h  drawable.h  engine.h  game-object.h  image.h  incremeter.h  line-object.h  point-object.h  point2f.h  polygon.h  rect.h  rect2f.h  rectf.h  render.h  runnable.h  scene.h  vertex.h  vertex2f.h  vertex2fc.h
src/: SceneLoader.cpp  animation.cpp  color4.cpp  engine.cpp  image.cpp  line-object.cpp  point-object.cpp  point2f.cpp  polygon.cpp  rect2f.cpp  rectf.cpp  render.cpp  scene.cpp  vertex2f.cpp
